# trace-protocol

./: .coverage  .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SOCIAL_ANNOUNCEMENTS.md  openapi.yaml  package-lock.json  vercel.json
examples/: README.md  sendEmail-withAction.mjs  sendEmail.mjs
examples/lib/: mailer.mjs
examples/python/: send_email.py  send_email_with_action.py
schema/: action.schema.json  evidence.schema.json  openapi.yaml  policy.schema.json
scripts/: e2e.sh
sdk/python/trace_client/: README.md  pyproject.toml  requirements-dev.txt
sdk/python/trace_client/tests/: conftest.py  test_client.py  test_with_action.py
sdk/python/trace_client/trace_client/: __init__.py  api.py  client.py  types.py  utils.py  with_action.py
sdk/python/trace_client/trace_client.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/trace_client/traceprotocol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/ts/client/: LICENSE  README.md  package-lock.json  package.json  trace-labs-client-0.1.0.tgz  tsconfig.json  vitest.config.ts
server/: package-lock.json  package.json  tsconfig.json
server/sql/: init.sql
server/src/: db.ts  index.ts  policy.spec.ts  policy.ts  routes.ts  store.ts
server/src/storage/: file.ts  index.ts  postgres.ts  s3.ts
server/test/: routes.init.spec.ts
website/: 404.html  index.html  index2.html  manifesto.html  next.config.ts  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  robots.txt  spec.html  tailwind.config.ts  test.html  tsconfig.json
website/assets/brand/: trace-protocol.code-workspace
website/src/app/: globals.css  layout.tsx  page.tsx
(+7 files in other folders)
